Rename ConfigurationSkips to Skips
Refactored the @Repeatable annotation's container from ConfigurationSkips to Skips for better clarity. Updated all references to match the change, ensuring consistent behavior in the configuration processing.

Update loadClass method to throw IllegalStateException

The loadClass method now explicitly throws an IllegalStateException, improving error handling and making exceptions more predictable. This change ensures that any issues during class loading are communicated clearly to the caller.

Refactor to improve readability and fix minor issues

Refactored method parameters for consistency and readability across multiple classes. Addressed performance by avoiding unnecessary list creation and made logging messages more descriptive. Updated HashMap initialization size and fixed version number in CompositeManager. Improved unit tests assertions for better clarity.

Refactor collections to use `Collections.unmodifiableList/map`

Removed custom utility methods and replaced them with standard library methods for creating unmodifiable lists and maps. This simplifies the code and reduces dependency on custom helper methods, thereby improving maintainability and readability.